--- a/people.htm
+++ b/people.htm
@@ -183,9 +183,9 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 </p>
 <p style="width: 640px; line-height: 1.6;" align="left">
 Dr. Chongzhi Zang is an Assistant Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA. He is also a faculty member of the UVA Cancer Center and the UVA Data Science Institute. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Prior to joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in cancer epigenomics. His research focuses on algorithm development for high-throughput genomic data analytics and integrative modeling of gene regulatory networks in mammalian cell systems.
-</p>
+</p><br>
 <hr>
-<h3><font color="#002F6C">Postdoctoral Associates</font></h3>
+<h3><font color="#002F6C">Research Scientist</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/zhenjia_wang.jpg" style="width:180px">
 <b>Zhenjia Wang, PhD</b></p>
@@ -194,9 +194,11 @@ Office: West Complex, Suite 6131<br>
 Phone: 434-297-5236<br>
 Email: <a href="mailto:zhenjia@virginia.edu">zhenjia@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Zhenjia joined the lab as a postdoctoral research associate in January 2017. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying mechanisms of fusion transcripts in cancer.
+Zhenjia joined the lab as a postdoctoral research associate in January 2017 and have been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
 </p>
 <br>
+<hr>
+<h3><font color="#002F6C">Postdoctoral Associates</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b></p>
@@ -207,14 +209,6 @@ Email: <a href="mailto:sh8tv@virginia.edu">sh8tv@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Dr. Sheng'en Shawn Hu is a postdoctoral research associate starting November 2017. Before joining UVA, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
 </p><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/chris_dampier.jpg" style="width:180px">
-<b>Christopher Dampier, MD</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Chris is a General Surgery resident and a Research Fellow in the Department of Surgery and the Center for Public Health Genomics at the University of Virginia. He received his BA in Ethics, Politics, and Economics from Yale University and his MD from the University of Michigan. He was first exposed to informatics as a science while working as a commodities analyst at Louis Dreyfus Commodities, and he began analyzing high-dimensional bioinformatics data in the fMRI lab of Dr Jon-Kar Zubieta at the University of Michigan. He moved to Charlottesville for his residency in General Surgery and completed two years of clinical training prior to joining Dr Craig Slingluff's Surgical Oncology Training Grant under the mentorship of Dr Graham Casey in 2018. After two years of research, he will return to clinical training to complete his residency. Chris is a physician with growing expertise in bioinformatics and an interest in cancer genomics. His research focuses on molecular phenotyping and functional follow-up of GWAS-identified risk loci using high-throughput sequencing data in the setting of colorectal cancer.
-</p><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
 <b>Qingying Chen, PhD</b></p>
@@ -371,14 +365,6 @@ Email: <a href="mailto:kjd4pks@virginia.edu">kjd4pks@virginia.edu</a><br>
 Kendall Davis is an undergraduate student (Class of 2023) from Arlington, VA planning on majoring in Biostatistics. She’s interested in how the application of computational methods can be used to develop medical treatments. In her free time, Kendall enjoys participating in community service, exploring nature, and traveling.
 </p><br><br><br>
 <p style="line-height: 1.6;">
-<img align="right" src="images/sifan_tao.jpg" style="width:180px">
-<b>Sifan Tao</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:st5gur@virginia.edu">st5gur@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Sifan is an undergraduate student in the College of Arts and Sciences (Class of 2023) majoring in Statistics and Mathematics. He's interested in the real-world application of what he has learned in class and plans to gain more experiences in research. During free time, he enjoys sports (tennis and soccer), cooking and playing games.
-</p><br><br><br>
-<p style="line-height: 1.6;">
 <img align="right" src="images/aaron_mun.jpg" style="width:180px">
 <b>Aaron Mun</b></p>
 <p style="line-height: 1.6;">
@@ -401,14 +387,6 @@ Naomi Luu is an undergraduate student (Class of 2023) from Northern Virginia, ma
 Email: <a href="mailto:ml9uu@virginia.edu">ml9uu@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Muaaz Luqman is an undergraduate student (class of 2023) from South Riding, Virginia majoring in Commerce with concentrations in Finance and IT in the McIntire School of Commerce. He is interested in learning more about computational biology and its applications in providing solutions to biological issues. In the future, he aspires to go to medical school. In his free time, he enjoys playing and watching sports (Go Pack Go!), volunteering, and traveling. He is also a Resident Advisor and a member of VCG and the MSA.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/bia_sajjad.jpg" style="width:180px">
-<b>Bia Sajjad</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:nss8ww@virginia.edu">nss8ww@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Bia Sajjad is an undergraduate student (Class of 2023) majoring in Global Public Health and Spanish in the College of Arts and Sciences. Bia is excited to contribute to genomics research and learn new skills that contribute to advances in computational biology and medicine. She hopes to attend medical school in the future to become a physician. Outside of the classroom, Bia is a scribe at the UVA hospital, a member of the Virginia Dance Team, and enjoys reading and running.
 </p><br><br>
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
@@ -668,7 +646,7 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 11, 2021</p>
+<p align="right">Last modified: August 16, 2021</p>
 
 </div>
 
