--- a/index.htm
+++ b/index.htm
@@ -116,7 +116,7 @@ function myFunction() {
       <img src="images/1488566891987_67648.jpg">
     </li>
     <li>
-      <img src="images/20191101_3.jpg">
+      <img src="images/20210814.jpg">
     </li>
     <li>
       <img src="images/1488567032192_666768.jpg">
@@ -702,7 +702,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 11, 2021</p>
+<p align="right">Last modified: August 17, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
