--- a/people.htm
+++ b/people.htm
@@ -133,6 +133,12 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20210814.jpg">
+    </li>
+    <li>
+      <img src="images/20210815.jpg">
+    </li>
+    <li>
       <img src="images/20210506.jpg">
     </li>
     <li>
@@ -646,7 +652,7 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 16, 2021</p>
+<p align="right">Last modified: August 17, 2021</p>
 
 </div>
 
