--- a/people.htm
+++ b/people.htm
@@ -245,13 +245,13 @@ Mengxue Tian is a PhD student in the Biomedical Sciences (BIMS) program. Before 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before joining the lab in 2019, he obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He is interested in historical knowledge as well.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
+<p style="line-height: 1.6;">
 <img align="right" src="images/zhaoxia_ma.jpg" style="width:180px">
 <b>Zhaoxia Ma</b>
 <a href="mailto:prm2zt@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Zhaoxia Ma
-</p><br><br>-->
+Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
+</p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
 <b>Andrew Vanichkachorn</b>
@@ -299,50 +299,7 @@ Emilie Neulen is a Biology major with a possible minor in German on the pre-med 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/maggie_bujor.jpg" style="width:180px">
-<b>Maggie Bujor</b>
-<a href="mailto:mjb6ep@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Maggie Bujor is a Computer Science Major in the class of 2022. She is interested in learning more about the exciting advances in computational genomics at the intersection of data science and biology. In the future, she hopes to attend medical school to become a physician. Outside of class, she is a member of Virginia Dance Company, volunteers actively through Madison House, and enjoys exploring Charlottesville and the Shenandoah.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/jasmine_dogu.jpg" style="width:180px">
-<b>Jasmine Dogu</b>
-<a href="mailto:ejd5mm@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Jasmine Dogu is an undergraduate student (Class of 2022) from Fairfax, VA double majoring in Statistics and Computer Science with a possible minor in Health and Well-Being. She is interested in the development and application of data science within the medical field. She is currently involved with HackCville and theCourseForum. In her free time, she enjoys cooking, watching Ted Talks/documentaries, and volunteering in the Charlottesville Community. 
-</p><br><br>-->
 <h4><font color="#002F6C">Class of 2023</font></h4>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/alex_li.jpg" style="width:180px">
-<b>Alex Li</b>
-<a href="mailto:aml7hqv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>
-<a href="https://github.com/621alexl" target="_blank"><img src="images/GitHub-Mark-32px.png" style="width:16px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Alex is an undergraduate student (Class of 2023) from Wilton, Connecticut planning on majoring in Computer Science. He's interested in machine learning and the applications of computer science to data analysis, particularly in its capability to solve pressing scientific questions. Outside of school, he likes poetry, drawing, mac and cheese, and spending time with friends.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/joe_barrett.jpg" style="width:180px">
-<b>Joe Barrett</b>
-<a href="mailto:jsb8vs@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Joe is an undergraduate at UVA in the College of Arts and Sciences from Fauquier, VA. He is planning to major in Mathematics with a concentration in probability and statistics. The most intriguing part of research for Joe is the intersection between data and real-world applications. Outside of school, he likes fly-fishing, hiking with his dog, and he enjoys traveling to places he has not been before. 
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/kendall_davis.jpg" style="width:180px">
-<b>Kendall Davis</b>
-<a href="mailto:kjd4pks@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Kendall Davis is an undergraduate student (Class of 2023) from Arlington, VA planning on majoring in Biostatistics. She’s interested in how the application of computational methods can be used to develop medical treatments. In her free time, Kendall enjoys participating in community service, exploring nature, and traveling.
-</p><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/aaron_mun.jpg" style="width:180px">
-<b>Aaron Mun</b>
-<a href="mailto:ahm5jj@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on double-majoring in Biochemistry and Biostatistics with a potential minor in Bioethics. He is interested in the development and application of data science in the medical field, especially how computational methods can be applied to observe multiple health factors such as social, genetic, etc. In his free time, he likes swimming, exploring Charlottesville’s music and food scene and being with friends. He is apart of the Club Swim at UVA, PHIDE (Co-ed Pre-Medical Fraternity) and Student Council.
-</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/naomi_luu.jpg" style="width:180px">
 <b>Naomi Luu</b>
@@ -350,13 +307,6 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Naomi Luu is an undergraduate student (Class of 2023) from Northern Virginia, majoring in Biology. She is interested in biomedical research, specifically the application and impact of computational methods on the study of human diseases. She is excited to explore how the study of computer science, biology, and statistics intersect. In her free time, she enjoys reading, going to concerts, and hiking. She also volunteers through Madison House and is a member of AMSA, the All Girls Stem Society, and Alpha Epsilon Delta at UVA.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/muaaz_luqman.jpg" style="width:180px">
-<b>Muaaz Luqman</b>
-<a href="mailto:ml9uu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Muaaz Luqman is an undergraduate student (class of 2023) from South Riding, Virginia majoring in Commerce with concentrations in Finance and IT in the McIntire School of Commerce. He is interested in learning more about computational biology and its applications in providing solutions to biological issues. In the future, he aspires to go to medical school. In his free time, he enjoys playing and watching sports (Go Pack Go!), volunteering, and traveling. He is also a Resident Advisor and a member of VCG and the MSA.
-</p><br><br>-->
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
@@ -613,7 +563,7 @@ Ivory Tang (Class of 2025).-->
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 28, 2021</p>
+<p align="right">Last modified: August 30, 2021</p>
 
 </div>
 
