--- a/position.htm
+++ b/position.htm
@@ -114,7 +114,7 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
-<h3><font color="#002F6C">Postdoctoral Research Associates (3)</font></h3>
+<h3><font color="#002F6C">Postdoctoral Research Associates (3 Positions)</font></h3>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -153,7 +153,7 @@ All positions are restricted and contingent on the continuation of funding. The 
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 <hr>
-<h3><font color="#002F6C">Computational Biologist (1)</font></h3>
+<h3><font color="#002F6C">Computational Biologist (1 Position)</font></h3>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -188,7 +188,7 @@ All positions are restricted and contingent on the continuation of funding. The 
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 <hr>
-<h3><font color="#002F6C">Bioinformatics Research Scientist (1)</font></h3>
+<h3><font color="#002F6C">Bioinformatics Research Scientist (1 Position)</font></h3>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -251,7 +251,7 @@ For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
-We are recruiting graduate students for research training and completing PhD thesis in the lab. Prospective student should apply for either the <a href="https://med.virginia.edu/bims/" target="_blank">Biomedical Sciences (BIMS) graduate program</a> at the UVA School of Medicine or the <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/bme-graduate-programs" target="_blank">Biomedical Engineering (BME) graduate program</a> at the UVA School of Engineering and Applied Science. Admitted PhD students please contact Dr. Zang for rotation opportunities.
+We are recruiting graduate students for research training and completing PhD thesis research in the lab. Besides research grants funded to the lab, UVA has multiple NIH T32 training grants, including Cell and Molecular Biology (CMB) and Systems and Biomolecular Data Science (SBDS), available to support eligible students in the lab. Prospective student should apply for either the <a href="https://med.virginia.edu/bims/" target="_blank">Biomedical Sciences (BIMS) graduate program</a> at the UVA School of Medicine or the <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/bme-graduate-programs" target="_blank">Biomedical Engineering (BME) graduate program</a> at the UVA School of Engineering and Applied Science. Admitted students please contact Dr. Zang for rotation opportunities.
 </p>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
@@ -261,11 +261,7 @@ Undergraduate students are welcome to join the lab before the Third Year to get 
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
 <hr>
-<!--<h3><font color="#002F6C">Why UVA?</font></h3>
-<p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend Nathan's <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
-</p>
-<hr>-->
-<p align="right">Last modified: June 30, 2021</p>
+<p align="right">Last modified: August 30, 2021</p>
 </div>
 
 </body></html>
