--- a/people.htm
+++ b/people.htm
@@ -283,7 +283,7 @@ Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works
 <b>Benjamin Ke</b>
 <a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Ben Ke is an undergraduate student (Class of 2022) and intends on majoring in Statistics with a concentration in Biology. He looks forward to learning how to apply statistical, coding,  and other skills from the classroom in actual research. He currently volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time. After graduation, he hopes to study in a medically-related field.
+Ben Ke is an undergraduate student (Class of 2022) majoring in Biostatistics. He looks forward to learning how to apply statistical, coding, and other skills from the classroom in actual research. He currently volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time. After graduation, he hopes to study in a medically-related field.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/emilie_neulen.jpg" style="width:180px">
