--- a/index.htm
+++ b/index.htm
@@ -142,11 +142,25 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">September 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn and Mengxue each presents a poster at Cold Spring Harbor Meetings on Mechanisms of Eukaryotic Transcription and Eukaryotic DNA Replication & Genome Maintenance. 
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">August 2021</font>
 		</p>
 	</div>
 	<div class="column right">
 		<p>
+		The first lab retreat is held at Thomson Farm in Leesburg, Virginia. Lab members explore Harpers Ferry by hiking and boating. 
+		<br><br>
 		In collaboration with Drs. Aidong Zhang and Stefan Bekiranov, Chongzhi receives a medium grant from NSF as a co-PI.
 		</p>
 	</div>
@@ -702,7 +716,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 17, 2021</p>
+<p align="right">Last modified: September 8, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
