--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Zhenjia's collaboration work with the Hao Jiang Lab is published in <a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank"><i>Nature</i></a>!
+		<br><br>
 		Shawn and Mengxue each presents a poster at Cold Spring Harbor Meetings on Mechanisms of Eukaryotic Transcription and Eukaryotic DNA Replication & Genome Maintenance. 
 		</p>
 	</div>
@@ -716,7 +718,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 8, 2021</p>
+<p align="right">Last modified: September 15, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
