--- a/publication.htm
+++ b/publication.htm
@@ -131,12 +131,12 @@ Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chan
 <li><p><a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank">UTX condensation underlies its tumour-suppressive activity</a><br> 
 Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, Jing Hu, Francesco Palomba, Yanfang Zhao, John Philip Le, William Jarrard, David Dimoff, Michelle A. Digman, Enrico Gratton, <u>Chongzhi Zang</u>, Hao Jiang 
 <br>
-<i><b>Nature</b></i>, https://doi.org/10.1038/s41586-021-03903-7 (2021)
+<i><b>Nature</b></i>, <a href="https://doi.org/10.1038/s41586-021-03903-7" target="_blank">doi:10.1038/s41586-021-03903-7</a> (2021)
 </p></li>
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gcc.22993" target="_blank">Assessing acute myeloid leukemia susceptibility in rearrangement-driven patients by DNA breakage at topoisomerase II and CCCTC-binding factor/cohesin binding sites</a><br> 
 Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
 <br>
-<i><b>Genes, Chromosomes & Cancer</b></i>, https://doi.org/10.1002/gcc.22993 (2021)
+<i><b>Genes, Chromosomes & Cancer</b></i>, <a href="https://doi.org/10.1002/gcc.22993" target="_blank">doi:10.1002/gcc.22993</a> (2021)
 </p></li>
 <li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
@@ -156,7 +156,7 @@ Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yu
 <li><p><a href="https://www.nature.com/articles/s41375-020-01116-x" target="_blank">U2af1 is required for survival and function of hematopoietic stem/progenitor cells</a><br>
 Avik Dutta, Yue Yang, Bao T. Le, <u>Yifan Zhang</u>, Omar Abdel-Wahab, <u>Chongzhi Zang</u>, Golam Mohi
 <br>
-<i><b>Leukemia</b></i>, <a href="https://doi.org/10.1038/s41375-020-01116-x" target="_blank">doi:10.1038/s41375-020-01116-x</a> (2021)
+<i><b>Leukemia</b></i> 35, 2382&ndash;2398 (2021)
 </p></li>
 <li><p><a href="https://link.springer.com/article/10.1007%2Fs40484-020-0225-2" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
 <u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
@@ -189,7 +189,7 @@ Jing Zhang*, Donghoon Lee*, Vineet Dhiman*, Peng Jiang*, Jie Xu*, Patrick McGill
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41423-020-0436-5" target="_blank">Ectopic Tcf1 expression instills a stem-like program in exhausted CD8<sup>+</sup> T cells to enhance viral and tumor immunity</a><br> 
 Qiang Shan*, <u>Sheng’en Hu</u>*, Xia Chen, Derek B. Danahy, Vladimir P. Badovinac, <u>Chongzhi Zang</u><sup>#</sup>, Hai-Hui Xue<sup>#</sup><br>
-<i><b>Cellular & Molecular Immunology</b></i>, doi:10.1038/s41423-020-0436-5 (2020)
+<i><b>Cellular & Molecular Immunology</b></i> 18, 1262&ndash;1277 (2020)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41598-020-61369-5" target="_blank">An epilepsy-associated mutation in the nuclear import receptor KPNA7 reduces nuclear localization signal binding</a><br> 
 Luke T. Oostdyk, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Hui Li, Michael J. McConnell, Bryce M. Paschal<br>
