--- a/publication.htm
+++ b/publication.htm
@@ -124,6 +124,11 @@ Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chan
 <br>
 <b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
 </p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">Nonparametric interrogation of transcriptional regulation in single-cell RNA and chromatin accessibility multiomic data</a><br>
+Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nancy R Zhang<sup>#</sup>, Yuchao Jiang<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.09.22.461437v1" target="_blank">https://doi.org/10.1101/2021.09.22.461437</a> (2021)
+</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
@@ -346,7 +351,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: September 15, 2021</p>
+<p align="right">Last modified: September 25, 2021</p>
 </div>
 
 </body></html>
