--- a/publication.htm
+++ b/publication.htm
@@ -136,7 +136,7 @@ Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nanc
 <li><p><a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank">UTX condensation underlies its tumour-suppressive activity</a><br> 
 Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, Jing Hu, Francesco Palomba, Yanfang Zhao, John Philip Le, William Jarrard, David Dimoff, Michelle A. Digman, Enrico Gratton, <u>Chongzhi Zang</u>, Hao Jiang 
 <br>
-<i><b>Nature</b></i>, <a href="https://doi.org/10.1038/s41586-021-03903-7" target="_blank">doi:10.1038/s41586-021-03903-7</a> (2021)
+<i><b>Nature</b></i>, 597, 726&ndash;731 (2021)
 </p></li>
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gcc.22993" target="_blank">Assessing acute myeloid leukemia susceptibility in rearrangement-driven patients by DNA breakage at topoisomerase II and CCCTC-binding factor/cohesin binding sites</a><br> 
 Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
@@ -181,11 +181,11 @@ Danqi Chen*, Qiao Yi Chen*, <u>Zhenjia Wang</u>*, Yusha Zhu, Thomas Kluz, <u>Wuw
 <i><b>iScience</b></i> 23, 101518 (2020)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-020-2493-4" target="_blank">Expanded encyclopaedias of DNA elements in the human and mouse genomes</a><br> 
-<u>The ENCODE Project Consortium</u>, Jill E. Moore*, Michael J. Purcaro*, Henry E. Pratt*, Charles B. Epstein*, Noam Shoresh*, Jessika Adrian*, Trupti Kawli*, Carrie A. Davis*, Alexander Dobin*, Rajinder Kaul*, Jessica Halow*, Eric L. Van Nostrand*, Peter Freese*, David U. Gorkin*, Yin Shen*, Yupeng He*, Mark Mackiewicz*, Florencia Pauli-Behn*, Brian A. Williams, Ali Mortazavi, Cheryl A. Keller, Xiao-Ou Zhang, Shaimae I. Elhajjajy, Jack Huey, Diane E. Dickel, Valentina Snetkova, Xintao Wei, Xiaofeng Wang, Juan Carlos Rivera-Mulia, Joel Rozowsky, Jing Zhang, Surya B. Chhetri, Jialing Zhang, Alec Victorsen, Kevin P. White, Axel Visel, Gene W. Yeo, Christopher B. Burge, Eric Lécuyer, David M. Gilbert, Job Dekker, John Rinn, Eric M. Mendenhall, Joseph R. Ecker, Manolis Kellis, Robert J. Klein, William S. Noble, Anshul Kundaje, Roderic Guigó, Peggy J. Farnham, J. Michael Cherry<sup>#</sup>, Richard M. Myers<sup>#</sup>, Bing Ren<sup>#</sup>, Brenton R. Graveley<sup>#</sup>, Mark B. Gerstein<sup>#</sup>, Len A. Pennacchio<sup>#</sup>, Michael P. Snyder<sup>#</sup>, Bradley E. Bernstein<sup>#</sup>, Barbara Wold<sup>#</sup>, Ross C. Hardison<sup>#</sup>, Thomas R. Gingeras<sup>#</sup>, John A. Stamatoyannopoulos<sup>#</sup>, Zhiping Weng<sup>#</sup><br>
+The ENCODE Project Consortium (including <u>Chongzhi Zang</u>), Jill E. Moore*, Michael J. Purcaro*, Henry E. Pratt*, Charles B. Epstein*, Noam Shoresh*, Jessika Adrian*, Trupti Kawli*, Carrie A. Davis*, Alexander Dobin*, Rajinder Kaul*, Jessica Halow*, Eric L. Van Nostrand*, Peter Freese*, David U. Gorkin*, Yin Shen*, Yupeng He*, Mark Mackiewicz*, Florencia Pauli-Behn*, Brian A. Williams, Ali Mortazavi, Cheryl A. Keller, Xiao-Ou Zhang, Shaimae I. Elhajjajy, Jack Huey, Diane E. Dickel, Valentina Snetkova, Xintao Wei, Xiaofeng Wang, Juan Carlos Rivera-Mulia, Joel Rozowsky, Jing Zhang, Surya B. Chhetri, Jialing Zhang, Alec Victorsen, Kevin P. White, Axel Visel, Gene W. Yeo, Christopher B. Burge, Eric Lécuyer, David M. Gilbert, Job Dekker, John Rinn, Eric M. Mendenhall, Joseph R. Ecker, Manolis Kellis, Robert J. Klein, William S. Noble, Anshul Kundaje, Roderic Guigó, Peggy J. Farnham, J. Michael Cherry<sup>#</sup>, Richard M. Myers<sup>#</sup>, Bing Ren<sup>#</sup>, Brenton R. Graveley<sup>#</sup>, Mark B. Gerstein<sup>#</sup>, Len A. Pennacchio<sup>#</sup>, Michael P. Snyder<sup>#</sup>, Bradley E. Bernstein<sup>#</sup>, Barbara Wold<sup>#</sup>, Ross C. Hardison<sup>#</sup>, Thomas R. Gingeras<sup>#</sup>, John A. Stamatoyannopoulos<sup>#</sup>, Zhiping Weng<sup>#</sup><br>
 <i><b>Nature</b></i> 583, 699&ndash;710 (2020)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-020-2449-8" target="_blank">Perspectives on ENCODE</a><br> 
-<u>The ENCODE Project Consortium</u>, Michael P. Snyder<sup>#</sup>, Thomas R. Gingeras, Jill E. Moore, Zhiping Weng, Mark B. Gerstein, Bing Ren, Ross C. Hardison, John A. Stamatoyannopoulos, Brenton R. Graveley, Elise A. Feingold, Michael J. Pazin, Michael Pagan, Daniel A. Gilchrist, Benjamin C. Hitz, J. Michael Cherry, Bradley E. Bernstein, Eric M. Mendenhall, Daniel R. Zerbino, Adam Frankish, Paul Flicek, Richard M. Myers<br>
+The ENCODE Project Consortium (including <u>Chongzhi Zang</u>), Michael P. Snyder<sup>#</sup>, Thomas R. Gingeras, Jill E. Moore, Zhiping Weng, Mark B. Gerstein, Bing Ren, Ross C. Hardison, John A. Stamatoyannopoulos, Brenton R. Graveley, Elise A. Feingold, Michael J. Pazin, Michael Pagan, Daniel A. Gilchrist, Benjamin C. Hitz, J. Michael Cherry, Bradley E. Bernstein, Eric M. Mendenhall, Daniel R. Zerbino, Adam Frankish, Paul Flicek, Richard M. Myers<br>
 <i><b>Nature</b></i> 583, 693&ndash;698 (2020)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41467-020-14743-w" target="_blank">An integrative ENCODE resource for cancer genomics</a><br> 
@@ -351,7 +351,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: September 25, 2021</p>
+<p align="right">Last modified: September 30, 2021</p>
 </div>
 
 </body></html>
