--- a/publication.htm
+++ b/publication.htm
@@ -136,7 +136,7 @@ Yuriko Harigaya, Zhaojun Zhang, <u>Hongpan Zhang</u>, <u>Chongzhi Zang</u>, Nanc
 <li><p><a href="https://www.nature.com/articles/s41586-021-03903-7" target="_blank">UTX condensation underlies its tumour-suppressive activity</a><br> 
 Bi Shi*, Wei Li*, Yansu Song*, <u>Zhenjia Wang</u>*, Rui Ju, Aleksandra Ulman, Jing Hu, Francesco Palomba, Yanfang Zhao, John Philip Le, William Jarrard, David Dimoff, Michelle A. Digman, Enrico Gratton, <u>Chongzhi Zang</u>, Hao Jiang 
 <br>
-<i><b>Nature</b></i>, 597, 726&ndash;731 (2021)
+<i><b>Nature</b></i> 597, 726&ndash;731 (2021)
 </p></li>
 <li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/gcc.22993" target="_blank">Assessing acute myeloid leukemia susceptibility in rearrangement-driven patients by DNA breakage at topoisomerase II and CCCTC-binding factor/cohesin binding sites</a><br> 
 Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
