--- a/position.htm
+++ b/position.htm
@@ -261,7 +261,14 @@ Undergraduate students are welcome to join the lab before the Third Year to get 
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
 <hr>
-<p align="right">Last modified: August 30, 2021</p>
+<h3><font color="#002F6C">Why UVA?</font></h3>
+<p style="line-height: 1.6;">
+Take a look at these two videos about why we are excited to be part of the UVA community:<br>
+<a href="https://news.virginia.edu/video/why-uva-heres-why" target="_blank">"Why UVA? Here's why"</a><br>
+<a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
+</p>
+<hr>
+<p align="right">Last modified: September 30, 2021</p>
 </div>
 
 </body></html>
