--- a/publication.htm
+++ b/publication.htm
@@ -151,7 +151,7 @@ Naomi D. Atkin, Heather M. Raimer, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Yu
 <li><p><a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
 <u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
 <br>
-<i><b>Bioinformatics</b></i>, btab173 (2021)
+<i><b>Bioinformatics</b></i> 37, 3075&ndash;3078 (2021)
 </p></li>
 <li><p><a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank">BART Cancer: a web resource for transcriptional regulators in cancer genomes</a><br> 
 <u>Zachary V. Thomas</u>, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>
