--- a/people.htm
+++ b/people.htm
@@ -324,6 +324,15 @@ Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area m
 Ivory Tang (Class of 2025).-->
 </p><br><br>
 <hr>
+<h3><font color="#002F6C">High School Student</font></h3>
+<p style="line-height: 1.6;">
+<img align="right" src="images/sonnet_xu.jpg" style="width:180px">
+<b>Sonnet Xu</b>
+<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
+</p><br><br><br>
+<hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Postdoctoral Associates</font></h4>
 <table id="alumni">
@@ -556,7 +565,7 @@ Ivory Tang (Class of 2025).-->
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 31, 2021</p>
+<p align="right">Last modified: October 12, 2021</p>
 
 </div>
 
