--- a/people.htm
+++ b/people.htm
@@ -374,7 +374,7 @@ Sonnet is a current student at Troy High School (class of 2023) in Michigan inte
 		<td><b>Seung Hyun (Andrew) Lee</b></td>
 		<td>BA/MS in Statistics</td>
 		<td>09/2018&ndash;05/2019</td>
-		<td>Associate at Wells Fargo</td>
+		<td>Graduate Student in Computer Science, University of Pennsylvania</td>
 	</tr>
 	<tr>
 		<td><b>Jamel Simpson</b></td>
